k8's stuffs/project_deployment_templates/Ingress-Kong/2.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-submission-api
  namespace: grade-demo
spec:
  selector:
    app: grade-submission
  ports:
    - port: 3000
      targetPort: 3000
